[FIX] Removing extra space from the list tag.

--- a/6-components/_components.simple-blocks.scss
+++ b/6-components/_components.simple-blocks.scss
@@ -205,6 +205,7 @@ $nm-bg-color: $grey-gallery;
     &.ico:before {
         margin-right: .25em;
         font-size: 110%;
+        line-height: 0;
     }
 
     &.small { font-size: 90%; }
